5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4367/executions/1832_3184.log
== TEST (2019-06-13 18:23:14) 
-- CODE:
from numpy import*
a=input("digite as letras: ")
print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:23:41) 
-- CODE:
from numpy import*
a=input("digite as letras: ").split('')
print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:30:24) 
-- CODE:
from numpy import*
a=input("digite as letras: ")
v=zeros(size(a), dtype=int)
for i in range(a[-1],a[0],1):
	v[i]=v[i]+a[i]
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:31:49) 
-- CODE:
from numpy import*
a=input("digite as letras: ")
for i in range(::-1):
	
print(i)
-- ERROR:
File "XXXX", line 3
    for i in range(::-1):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:33:05) 
-- CODE:
from numpy import*
a=input("digite as letras: ")
for i in range (size(a)):
	print(::a)
-- ERROR:
File "XXXX", line 4
    print(::a)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:34:18) 
-- CODE:
from numpy import*
a=input("digite as letras: ")
for i in range (size(a[-1],a[-1],-1)):
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:41:11) 
-- CODE:
from numpy import*
a=input("digite as letras: ")
v=zeros(size(a), dtype=int)
c=0
for i in range (size(a)-1,0,-1):
	v[c]=a[i]
	c=c+1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:41:54) 
-- CODE:
from numpy import*
a=input("digite as letras: ")
v=zeros(size(a), dtype=str)
c=0
for i in range (size(a)-1,0,-1):
	v[c]=a[i]
	c=c+1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:44:02) 
-- CODE:
from numpy import*
a=input("digite as letras: ")
v=""
for i in range (size(a)-1,0,-1):
	v=v+a[i]
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:44:24) 
-- CODE:
from numpy import*
a=input("digite as letras: ")
v=""
for i in range (size(a)-1,0,-1):
	v=v+""+a[i]
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:45:11) 
-- CODE:
from numpy import*
a=input("digite as letras: ")
v=""
print(a[0])
for i in range (size(a)-1,0,-1):
	v=v+""+a[i]
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:45:39) 
-- CODE:
from numpy import*
a=eval(input("digite as letras: "))
v=""
print(a[0])
for i in range (size(a)-1,0,-1):
	v=v+""+a[i]
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:46:02) 
-- CODE:
from numpy import*
a=eval(input("digite as letras: "))
v=""
print(a[0])
for i in range (size(a)-1,-1,-1):
	v=v+""+a[i]
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:46:15) 
-- CODE:
from numpy import*
a=eval(input("digite as letras: "))
v=""
for i in range (size(a)-1,-1,-1):
	v=v+""+a[i]
	
print(v)
-- EXECUTION TIME:
0.776939
-- TEST CASE 1:
---- input:
['x','p','m','k','e','c','a']
---- correct output:
['a' 'c' 'e' 'k' 'm' 'p' 'x']
---- user output:
acekmpx
-- TEST CASE 2:
---- input:
['f','e','e','d','c','b','a']
---- correct output:
['a' 'b' 'c' 'd' 'e' 'e' 'f']
---- user output:
abcdeef
-- TEST CASE 3:
---- input:
['n','l','k','i','e','b']
---- correct output:
['b' 'e' 'i' 'k' 'l' 'n']
---- user output:
beikln
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:47:10) 
-- CODE:
from numpy import*
a=eval(input("digite as letras: "))
v=zeros(size(a), dtype=str)
for i in range (size(a)-1,-1,-1):
	v=v+""+a[i]
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:47:30) 
-- CODE:
from numpy import*
a=eval(input("digite as letras: "))
v=zeros(size(a), dtype=str)
for i in range (size(a)-1,-1,-1):
	v[i]=v[i]+""+a[i]
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:47:41) 
-- CODE:
from numpy import*
a=eval(input("digite as letras: "))
v=zeros(size(a), dtype=str)
for i in range (size(a)-1,-1,-1):
	v[i]=v[i]+""+a[i]
	
print(v)
-- EXECUTION TIME:
0.948676
-- TEST CASE 1:
---- input:
['x','p','m','k','e','c','a']
---- correct output:
['a' 'c' 'e' 'k' 'm' 'p' 'x']
---- user output:
['x' 'p' 'm' 'k' 'e' 'c' 'a']
-- TEST CASE 2:
---- input:
['f','e','e','d','c','b','a']
---- correct output:
['a' 'b' 'c' 'd' 'e' 'e' 'f']
---- user output:
['f' 'e' 'e' 'd' 'c' 'b' 'a']
-- TEST CASE 3:
---- input:
['n','l','k','i','e','b']
---- correct output:
['b' 'e' 'i' 'k' 'l' 'n']
---- user output:
['n' 'l' 'k' 'i' 'e' 'b']
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:47:50) 
-- CODE:
from numpy import*
a=eval(input("digite as letras: "))
v=zeros(size(a), dtype=str)
for i in range (size(a)-1,-1,-1):
	v[i]=v[i]+""+a[i]
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:48:29) 
-- CODE:
from numpy import*
a=eval(input("digite as letras: "))
v=zeros(size(a), dtype=str)
c=0
for i in range (size(a)-1,-1,-1):
	v[c]=v[c]+""+a[i]
	c=c+1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:48:40) 
-- CODE:
from numpy import*
a=eval(input("digite as letras: "))
v=zeros(size(a), dtype=str)
c=0
for i in range (size(a)-1,-1,-1):
	v[c]=v[c]+""+a[i]
	c=c+1
print(v)
-- EXECUTION TIME:
0.929442
-- TEST CASE 1:
---- input:
['x','p','m','k','e','c','a']
---- correct output:
['a' 'c' 'e' 'k' 'm' 'p' 'x']
---- user output:
['a' 'c' 'e' 'k' 'm' 'p' 'x']
-- TEST CASE 2:
---- input:
['f','e','e','d','c','b','a']
---- correct output:
['a' 'b' 'c' 'd' 'e' 'e' 'f']
---- user output:
['a' 'b' 'c' 'd' 'e' 'e' 'f']
-- TEST CASE 3:
---- input:
['n','l','k','i','e','b']
---- correct output:
['b' 'e' 'i' 'k' 'l' 'n']
---- user output:
['b' 'e' 'i' 'k' 'l' 'n']
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
